# otus_cpp

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Doxyfile  Makefile  PRINT_IP-0.0.54-Linux.deb  PRINT_IP-0.0.55-Linux.deb  PRINT_IP-0.0.57-Linux.deb  PRINT_IP-0.0.58-Linux.deb  PRINT_IP-0.0.59-Linux.deb  PRINT_IP-0.0.60-Linux.deb  PRINT_IP-0.0.61-Linux.deb  PRINT_IP-0.0.64-Linux.deb  README.md  _bits_8h.html  _bits_8h__dep__incl.dot  _bits_8h__dep__incl.map  _bits_8h__dep__incl.md5  _bits_8h__incl.dot  _bits_8h__incl.map  _bits_8h__incl.md5  _bits_8h_source.html  _boundaries_8h.html  _boundaries_8h__dep__incl.map  _boundaries_8h__dep__incl.md5  _boundaries_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_812_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_812_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  _c_make_files_23_812_84_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  _c_make_files_23_812_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_812_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _c_make_files_23_812_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_files_2feature__tests_8c.html  _c_make_files_2feature__tests_8c_source.html  (+830 more)
Testing/Temporary/: CTestCostData.txt
cmakeModules/: CompilerOptions.cmake  PreDeploy.cmake
cmake_modules/: CompilerOptions.cmake  Functions.cmake  PreDeploy.cmake
doxygen/: doxy-boot.js  footer.html  header.html
gtest_temp/: CMakeCache.txt  Makefile  cmake_install.cmake
hw0_cicd/: CMakeLists.txt  README.md
hw0_cicd/lib/: CMakeLists.txt  version.cpp  version.h
hw0_cicd/src/: CMakeLists.txt  main.cpp
hw0_cicd/tests/: CMakeLists.txt
hw1_cicd/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  config.h
hw1_cicd/lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  version.cpp  version.h
hw1_cicd/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cicd  cmake_install.cmake  main.cpp
hw1_cicd/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw1_cicd/tests/BoostTests/: CMakeLists.txt  ProjectVersionTests.cpp
hw1_cicd/tests/GoogleTests/: CMakeLists.txt  CTestTestfile.cmake  CicdGoogleTests  GoogleTest.cpp  Makefile  ProjectVersionTests.h  cmake_install.cmake
hw1_ip_filter/: README.md
hw1_ip_filter/src/: CMakeLists.txt
hw1_ip_filter/src/IpFilter/: Boundaries.h  CMakeLists.txt  GenericIp.h  IpFunctions.h  IpStorage.h  IpStoragePrinter.cpp  IpStoragePrinter.h  IpV4.cpp  IpV4.h  Restrictions.cpp  Restrictions.h
hw1_ip_filter/src/IpFilterExample/: CMakeLists.txt  main.cpp
hw1_ip_filter/tests/: CMakeLists.txt
hw1_ip_filter/tests/IpFilterTests/: CMakeLists.txt  IpFilterTests.cpp  IpStorageTests.h  IpV4Tests.h
hw1_ip_filter/tests/IpFilterTests/test_data/: expected_ips.txt
hw2_allocator/: CMakeLists.txt
hw2_allocator/ReserveAllocator/: CMakeLists.txt  ClassicAllocator.h  List.h  ReserveAllocator.h
hw2_allocator/ReserveAllocatorExample/: CMakeLists.txt  main.cpp
hw2_allocator/ReserveAllocatorTests/: CMakeLists.txt  ListTests.h  ReserveAllocatorTests.cpp  ReserveAllocatorTests.h
hw2_ip_filter/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
hw2_ip_filter/libs/: CMakeLists.txt
hw2_ip_filter/libs/StringAddOns/: CMakeLists.txt  IpV4.h  StringFunctions.cpp
hw2_ip_filter/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw2_ip_filter/src/IpFilter/: CMakeLists.txt  CTestTestfile.cmake  ForEach.h  IpStorage.cpp  IpStorage.h  IpStoragePrinter.cpp  IpStoragePrinter.h  IpV4.cpp  IpV4.h  Makefile  ProcessDirection.h  cmake_install.cmake
hw2_ip_filter/src/RequiredOutputsModule/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
hw2_ip_filter/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw2_ip_filter/tests/IpFilterTests/: CMakeLists.txt  CTestTestfile.cmake  IpFilterTests  IpFilterTests.cpp  IpStorageTests.cpp  IpStorageTests.h  IpV4Tests.h  Makefile  cmake_install.cmake
hw3_print_ip/: CMakeLists.txt  README.md
hw3_print_ip/PrintIp/: Bits.h  CMakeLists.txt  PrintBits.h  PrintIp.h
hw3_print_ip/PrintIpExample/: CMakeLists.txt  example.cpp
hw3_print_ip/PrintIpTests/: CMakeLists.txt  PrintIpTests.cpp  PrintIpTests.h
hw3_print_ip/tests/: CMakeLists.txt
hw4_print_ip/: CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
hw4_print_ip/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
hw4_print_ip/src/PrintIp/: Bits.h  CMakeLists.txt  CTestTestfile.cmake  Makefile  PrintBits.h  PrintIp.cpp  PrintIp.h  cmake_install.cmake
hw4_print_ip/src/PrintIpExample/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example.cpp  print_ip
hw4_print_ip/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/: CMakeLists.txt  version.cpp
libs/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/OperationResult/: CMakeLists.txt  CTestTestfile.cmake  Makefile  OperationResult.cpp  OperationResult.h  cmake_install.cmake
libs/StringAddOns/: CMakeLists.txt  CTestTestfile.cmake  Makefile  StringFunctions.cpp  StringFunctions.h  cmake_install.cmake
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+36 more)
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/BoostTests/: CMakeLists.txt  ProjectVersionTests.cpp
tests/GoogleTests/: CMakeLists.txt  GoogleTest.cpp  ProjectVersionTests.h
(+44 files in other folders)
